hphp/hack/test/typecheck/class_abstract_final_2.php.exp
File "class_abstract_final_2.php", line 9, characters 29-31:
`Foo` is uninstantiable (Typing[4002])
  File "class_abstract_final_2.php", line 3, characters 22-24:
  Declaration is here
